feat:/ 1) install and settings laravel sanctum 2) make auth page 3) make snackbar 4) some fixes inside reusable components (VCard, CustomButton) 5) install vee-validate & yup 6) remove auto-generated files 7) make VTextField

--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.0.4",
+        "mande": "^2.0.8",
         "pinia": "^2.1.7",
+        "vee-validate": "^4.12.6",
         "vue": "^3.4.21",
-        "vue-router": "^4.3.0"
+        "vue-router": "^4.3.0",
+        "yup": "^1.4.0"
     }
 }
